--- a/Tutor.MobileUI/AppShell.xaml
+++ b/Tutor.MobileUI/AppShell.xaml
@@ -5,5 +5,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Tutor.MobileUI"
     Shell.FlyoutBehavior="Disabled">
-
+  <ShellContent Route="Main">
+    <ShellContent.ContentTemplate>
+      <DataTemplate>
+        <ContentPage>
+          <Label Text="This is test start page"/>
+        </ContentPage>
+      </DataTemplate>
+    </ShellContent.ContentTemplate>
+  </ShellContent>
 </Shell>
