handle server not responding when signing in

--- a/Tutor.MobileUI/Pages/LoginPage.xaml
+++ b/Tutor.MobileUI/Pages/LoginPage.xaml
@@ -5,7 +5,8 @@
              xmlns:dxc="clr-namespace:DevExpress.Maui.Controls;assembly=DevExpress.Maui.Controls"
              xmlns:conv="clr-namespace:Tutor.Client.Maui.Converters;assembly=Tutor.Client.Maui"
              x:Class="Tutor.MobileUI.Pages.LoginPage"
-             Title="LoginPage">
+             Title="LoginPage"
+             Shell.NavBarIsVisible="False">
   <ContentPage.Resources>
     <conv:IsNotNullToBooleanConverter x:Key="isNotNullConverter"/>
   </ContentPage.Resources>
