--- a/Tutor.MobileUI/Pages/LoginPage.xaml
+++ b/Tutor.MobileUI/Pages/LoginPage.xaml
@@ -10,11 +10,15 @@
   <ContentPage.Resources>
     <conv:IsNotNullToBooleanConverter x:Key="isNotNullConverter"/>
   </ContentPage.Resources>
-  <VerticalStackLayout VerticalOptions="Center">
-    <dxe:TextEdit Margin="50,10,50,10" LabelText="e-mail" Text="{Binding LoginDto.Email}"
+  <Grid>
+    <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="FillAndExpand">
+      <dxe:TextEdit Margin="50,10,50,10" LabelText="e-mail" Text="{Binding LoginDto.Email}"
                   ErrorText="{Binding EmailValidationErrors}" HasError="{Binding EmailValidationErrors, Converter={StaticResource isNotNullConverter}}"/>
-    <dxe:PasswordEdit Margin="50,10,50,10" LabelText="password" Text="{Binding LoginDto.Password}"
+      <dxe:PasswordEdit Margin="50,10,50,10" LabelText="password" Text="{Binding LoginDto.Password}"
                       ErrorText="{Binding PasswordValidationErrors}" HasError="{Binding PasswordValidationErrors, Converter={StaticResource isNotNullConverter}}"/>
-    <dxc:SimpleButton Margin="50,10,50,10" Text="Sign in" Command="{Binding LoginCommand}"/>
-  </VerticalStackLayout>
+      <dxc:SimpleButton Margin="50,10,50,10" Text="Sign in" Command="{Binding LoginCommand}"/>
+    </VerticalStackLayout>
+    <ActivityIndicator IsRunning="True" IsVisible="{Binding IsBusy}" VerticalOptions="Center"
+                       HorizontalOptions="Center"/>
+  </Grid>
 </ContentPage>
