--- a/Tutor.MobileUI/Pages/RegistrationPage.xaml
+++ b/Tutor.MobileUI/Pages/RegistrationPage.xaml
@@ -1,12 +1,32 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:dxe="clr-namespace:DevExpress.Maui.Editors;assembly=DevExpress.Maui.Editors"
+             xmlns:dxc="clr-namespace:DevExpress.Maui.Controls;assembly=DevExpress.Maui.Controls"
+             xmlns:conv="clr-namespace:Tutor.Client.Maui.Converters;assembly=Tutor.Client.Maui"
              x:Class="Tutor.MobileUI.Pages.RegistrationPage"
-             Title="RegistrationPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="{Binding Title}">
+  <ContentPage.Resources>
+    <ResourceDictionary>
+      <x:Int32 x:Key="one">1</x:Int32>
+    </ResourceDictionary>
+  </ContentPage.Resources>
+  <Grid RowDefinitions="*,100" Margin="30,20,30,20">
+    <ScrollView>
+      <VerticalStackLayout Spacing="10">
+        <Label Text="Enter your account's data:" TextColor="{StaticResource Primary}" FontSize="20"/>
+        <dxe:TextEdit LabelText="First name" Text="{Binding RegisterUserDto.FirstName}"/>
+        <dxe:TextEdit LabelText="Last name" Text="{Binding RegisterUserDto.LastName}"/>
+        <dxe:TextEdit LabelText="E-mail" Text="{Binding RegisterUserDto.Email}"/>
+        <dxe:PasswordEdit LabelText="Password" Text="{Binding RegisterUserDto.Password}"/>
+        <dxe:ComboBoxEdit SelectedIndex="{Binding SelectedRoleIndex}" LabelText="Role"
+                          ItemsSource="{Binding AllowedRoles}"/>
+        <dxe:PasswordEdit LabelText="Confirm password" Text="{Binding RegisterUserDto.ConfirmPassword}"/>
+        <dxe:MultilineEdit LabelText="Description" BoxMinHeight="200" Text="{Binding RegisterUserDto.TitorDescription}"
+                           IsVisible="{Binding SelectedRoleIndex, Converter={conv:IsEqualConverter}, ConverterParameter={StaticResource one}}"/>
+      </VerticalStackLayout>
+    </ScrollView>
+    <dxc:SimpleButton Text="Confirm" Grid.Row="1" VerticalOptions="Center" Command="{Binding ConfirmCommand}"/>
+  </Grid>
+  
 </ContentPage>
