--- a/Tutor.MobileUI/Resources/Styles/Colors.xaml
+++ b/Tutor.MobileUI/Resources/Styles/Colors.xaml
@@ -4,7 +4,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-  <Color x:Key="Primary">Orange</Color>
+    <Color x:Key="Primary">Orange</Color>
+    <Color x:Key="PrimaryTransparent">#59FFA500</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
     <Color x:Key="Tertiary">#2B0B98</Color>
     <Color x:Key="White">White</Color>
