--- a/Tutor.MobileUI/AppShell.xaml
+++ b/Tutor.MobileUI/AppShell.xaml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="Tutor.MobileUI.AppShell"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Tutor.MobileUI"
-    Shell.FlyoutBehavior="Disabled">
-  <ShellContent Route="Main">
-    <ShellContent.ContentTemplate>
-      <DataTemplate>
-        <ContentPage>
-          <Label Text="This is test start page"/>
-        </ContentPage>
-      </DataTemplate>
-    </ShellContent.ContentTemplate>
-  </ShellContent>
+  x:Class="Tutor.MobileUI.AppShell"
+  xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+  xmlns:local="clr-namespace:Tutor.MobileUI"
+  xmlns:pages="clr-namespace:Tutor.MobileUI.Pages"
+  Shell.FlyoutBehavior="Disabled">
+  <ShellContent ContentTemplate="{DataTemplate pages:AdvertisementsPage}"/>
 </Shell>
