passing filters model top filters vm

--- a/Tutor.MobileUI/AppShell.xaml
+++ b/Tutor.MobileUI/AppShell.xaml
@@ -6,5 +6,6 @@
   xmlns:local="clr-namespace:Tutor.MobileUI"
   xmlns:pages="clr-namespace:Tutor.MobileUI.Pages"
   Shell.FlyoutBehavior="Disabled">
-  <ShellContent ContentTemplate="{DataTemplate pages:AdvertisementsPage}"/>
+  <ShellContent ContentTemplate="{DataTemplate pages:AdvertisementsPage}"
+                Route="Advertisements"/>
 </Shell>
