--- a/Tutor.MobileUI/Pages/CreateAdvertisementPage.xaml
+++ b/Tutor.MobileUI/Pages/CreateAdvertisementPage.xaml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:dxe="clr-namespace:DevExpress.Maui.Editors;assembly=DevExpress.Maui.Editors"
+             xmlns:dxc="clr-namespace:DevExpress.Maui.Controls;assembly=DevExpress.Maui.Controls"
+             xmlns:conv="clr-namespace:Tutor.Client.Maui.Converters;assembly=Tutor.Client.Maui"
              x:Class="Tutor.MobileUI.Pages.CreateAdvertisementPage"
              Title="CreateAdvertisementPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="This is advertisement page"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+  <Grid RowDefinitions="*,100" Margin="30,20,30,20">
+    <ScrollView>
+      <StackLayout>
+        <Label Text="Enter new advertisement data:" TextColor="{StaticResource Primary}"
+               FontSize="20"/>
+        <dxe:TextEdit LabelText="Title" />
+        <dxe:MultilineEdit BoxMinHeight="200" MaxCharacterCount="1000"
+                           LabelText="Description"/>
+        <dxe:NumericEdit LabelText="Price per hour"/>
+        <dxe:ComboBoxEdit LabelText="Subject"/>
+        <dxe:FilterChipGroup HorizontalOptions="Center">
+          <dxe:Chip Text="Preschool"/>
+          <dxe:Chip Text="Primary"/>
+          <dxe:Chip Text="Secondary"/>
+          <dxe:Chip Text="High"/>
+          <dxe:Chip Text="Studies"/>
+        </dxe:FilterChipGroup>
+      </StackLayout>
+    </ScrollView>
+  </Grid>
 </ContentPage>
