--- a/Tutor.MobileUI/Pages/CreateAdvertisementPage.xaml
+++ b/Tutor.MobileUI/Pages/CreateAdvertisementPage.xaml
@@ -19,7 +19,7 @@
         <dxe:ComboBoxEdit LabelText="Subject" ItemsSource="{Binding Subjects}"
                           SelectedItem="{Binding SelectedSubject}"
                           DisplayMember="Name"/>
-        <dxe:FilterChipGroup HorizontalOptions="Center">
+        <dxe:FilterChipGroup HorizontalOptions="Center" SelectedIndexes="{Binding SelectedEducationLevelsIndexes}">
           <dxe:Chip Text="Preschool"/>
           <dxe:Chip Text="Primary"/>
           <dxe:Chip Text="Secondary"/>
@@ -28,6 +28,7 @@
         </dxe:FilterChipGroup>
       </StackLayout>
     </ScrollView>
+    <dxc:SimpleButton Grid.Row="1" Text="Create" Command="{Binding CreateCommand}"/>
     <ActivityIndicator Grid.RowSpan="2" IsRunning="True" IsVisible="{Binding IsBusy}"
                        VerticalOptions="Center" HorizontalOptions="Center"/>
   </Grid>
