--- a/Tutor.MobileUI/Pages/CreateAdvertisementPage.xaml
+++ b/Tutor.MobileUI/Pages/CreateAdvertisementPage.xaml
@@ -40,7 +40,8 @@
         <Label Text="{Binding LevelsValidationErrors}" TextColor="{StaticResource DarkRed}" FontSize="12"/>
       </StackLayout>
     </ScrollView>
-    <dxc:SimpleButton Grid.Row="1" Text="Create" Command="{Binding CreateCommand}"/>
+    <dxc:SimpleButton Grid.Row="1" Text="Create" Command="{Binding CreateCommand}"
+                      VerticalOptions="Center"/>
     <ActivityIndicator Grid.RowSpan="2" IsRunning="True" IsVisible="{Binding IsBusy}"
                        VerticalOptions="Center" HorizontalOptions="Center"/>
   </Grid>
