--- a/Tutor.MobileUI/AppShell.xaml
+++ b/Tutor.MobileUI/AppShell.xaml
@@ -20,6 +20,7 @@
     <ShellContent ContentTemplate="{DataTemplate pages:CreateAdvertisementPage}"
                   Title="Create advertisement"/>
     <ShellContent ContentTemplate="{DataTemplate pages:MyAdvertisementsPage}"
-                  Title="My advertisements"/>
+                  Title="My advertisements"
+                  Route="MyAdvertisements"/>
   </FlyoutItem>
 </Shell>
