--- a/Tutor.MobileUI/Pages/AdvertisementDetailsPage.xaml
+++ b/Tutor.MobileUI/Pages/AdvertisementDetailsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Tutor.MobileUI.Pages.AdvertisementDetailsPage"
-             Title="AdvertisementDetailsPage">
+             Title="{Binding Title}">
     <VerticalStackLayout>
         <Label 
             Text="This is advertisement details page"
